# XRLib_Renderer_Example

./: CMakeLists.txt  README.md
Examples/BasicFlatRendering/: CMakeLists.txt  main.cpp
Examples/CustomRenderPass/: CMakeLists.txt  customPass.cpp  customPass.h  main.cpp
Examples/CustomRenderPass/shaders/: forward.frag  forward_no_light.vert
Examples/DeferredStereo/: CMakeLists.txt  deferredCustomPass.cpp  deferredCustomPass.h  main.cpp
Examples/DeferredStereo/shaders/: offscreen.frag  offscreen.vert  present.frag  present.vert
Examples/FlatRenderingWithImGui/: CMakeLists.txt  main.cpp
Examples/XRRendering/: CMakeLists.txt  main.cpp
